--- a/settings.json
+++ b/settings.json
@@ -4,8 +4,8 @@
 "autocomposing": false,
 "autorecording": true,
 "NamaBot":"AyaaBot", 
-"NomorOwner":"6282138919347", 
-"NamaOwner":"Helga Ilham", 
+"NomorOwner":"94710725732", 
+"NamaOwner":"VIMUWA", 
 "Gopay" : "Qris",
 "Ovo" : "081398860278",
 "Dana" : "081398860278",
