--- a/settings.json
+++ b/settings.json
@@ -4,11 +4,11 @@
 "autocomposing": false,
 "autorecording": true,
 "NamaBot":"AyaaBot", 
-"NomorOwner":"94710725732", 
+"NomorOwner":"+94710725732", 
 "NamaOwner":"VIMUWA", 
 "Gopay" : "Qris",
-"Ovo" : "081398860278",
-"Dana" : "081398860278",
+"Ovo" : "0710725732",
+"Dana" : "0710725732",
 "LolKey": "DashBot",
 "HunterApi":"Ikyy69"
 }
